canary-rollout-ingress/guestbook-ui-svc.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: guestbook-ui
# spec:
#   ports:
#   - port: 80
#     targetPort: 80
#   selector:
#     app: guestbook-ui

apiVersion: v1
kind: Service
metadata:
  name: express-active
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: express-microservice
---
apiVersion: v1
kind: Service
metadata:
  name: express-preview
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: express-microservice
